# terroir-web

./: .gitignore  .prettierrc  CLAUDE.md  Makefile  README.md  docker-compose.yml  terroir-ai.code-workspace
backend/: .env.example  Cargo.toml  Dockerfile
backend/.sqlx/: query-0488ce505f2f6e0aff6d92c81b00a15985c4671e0a3200b4220553ebed3306c5.json  query-3d743ec24e1bdeb79907fee5ee90b69375c8e172a56ffca99df6588f1cc63bb2.json  query-484c5b088f55ed119608812ab7592b4c0b4d1ef2e99820fab6e2660d41fb3983.json  query-5f3a34f8f325146adc3c217d9b6e02550894bf7da4952d5645f36a7247952ca9.json  query-602d6d1fdc458513326d43bbe6c711d153835a1dc37d43dcfc2f0a71392d22a0.json  query-65d2640b3d5700c344198bf171b25c4ccb8fe40d8dc82916c73ce31c07553277.json  query-73db9f5c4ecbbd6fcd44026af8a5820769bcc368288bf33ebf3cda68a7c0e36b.json  query-787086f13a0a1743fd11b0608f716d35695a87c3dc0b9a807c1630571bba6976.json  query-793526457cfcfb2d2cfe32b0a8a5832c80c5f19df408624355dec052a1dcaef6.json  query-79635ab0cec12edbb00d54e4eca555d634a7516fa6baa4b462378e7e86849099.json  query-7ca849389e6b9f142bfa1d3a0b8d20c8d4445e6ceb4b83de801f834820eb4ad7.json  query-ccebaf4fcebf66e002461645b8d6b578c82df9e676c5c0ec8f65c3e63d7c29a4.json  query-e803d7b57cea797797a30277e60a7ef35c8f7d63c82be915542ae8a342011214.json
backend/migrations/: 20240101000001_initial.sql  20240102000001_analytics.sql  20260215000001_update_blog_content.sql  20260216000001_seed_pilot_experiment.sql
backend/src/: config.rs  email.rs  errors.rs  main.rs  models.rs  services.rs
backend/src/api/: handlers.rs  routes.rs
docs/: COST_AUDIT.md
(+44 files in other folders)
